# hello-cpp

./: CMakeLists.txt  USE-3RD-PARTY-LIB.md  config.h.in  main.cpp  test-drogon.cpp  test.cpp
MyLib/: CMakeLists.txt  my-lib.cpp  my-lib.h
find-package-test/include-curl/: CMakeLists.txt  main.cpp
libraries-test/shared-lib/: CMakeLists.txt  hello-shared-lib.cpp  hello-shared-lib.h  main.cpp
libraries-test/static-lib/: CMakeLists.txt  README.md  hello-static-lib.cpp  hello-static-lib.h  main.cpp
my-lib2/: CMakeLists.txt  my-lib.cpp  my-lib2.h
